# FBP

./: CMakeLists.txt  Makefile  README.md
include/: cpimaging.h  getInput.h
input/: LO2Energy.csv  coincidences_s1.txt  coincidences_s2.txt  input.txt
output/: s1.txt  s2.txt
source/: CMakeLists.txt  cpimaging.cc  cpimaging.h  getInput.cc  getInput.h
